before remove title

--- a/functions/views/partials/site-postBtn.ejs
+++ b/functions/views/partials/site-postBtn.ejs
@@ -15,8 +15,8 @@
         </div>
 
         <div class="modal-body">
-          <label class="form-label" for="title">หัวข้อ:</label>
-          <input class="form-control mb-3" type="text" name="title" id="title" placeholder="เรื่องไรดี">
+          <!-- <label class="form-label" for="title">หัวข้อ:</label>
+          <input class="form-control mb-3" type="text" name="title" id="title" placeholder="เรื่องไรดี"> -->
   
           <label class="form-label" for="content">เนื้อหา:</label>
           <textarea class="form-control mb-3" style="height: 120px;" name="content" id="content" cols="30" rows="10" placeholder="มีไรอยากเล่า"></textarea>
