--- a/functions/views/partials/site-postBtn.ejs
+++ b/functions/views/partials/site-postBtn.ejs
@@ -5,8 +5,8 @@
 </button>
 
 <div class="modal fade" id="newPostModal" tabindex="-1" >
-  <div class="modal-dialog shadow">
-    <div class="modal-content">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content shadow">
       <form action="/post/new" method="post"> 
 
         <div class="modal-header bg-body-tertiary">
@@ -15,8 +15,8 @@
         </div>
 
         <div class="modal-body">
-          <!-- <label class="form-label" for="title">หัวข้อ:</label>
-          <input class="form-control mb-3" type="text" name="title" id="title" placeholder="เรื่องไรดี"> -->
+          <label class="form-label" for="title">หัวข้อ:</label>
+          <input class="form-control mb-3" type="text" name="title" id="title" placeholder="เรื่องไรดี">
   
           <label class="form-label" for="content">เนื้อหา:</label>
           <textarea class="form-control mb-3" style="height: 120px;" name="content" id="content" cols="30" rows="10" placeholder="มีไรอยากเล่า"></textarea>
